<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>zendar_ros_driver</name>
  <version>0.0.0</version>
  <description>The zendar_ros_driver package</description>
  <maintainer email="hlittle@zendar.io">slau</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>image_transport</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>diagnostic_updater</build_depend>
  <build_depend>pcl_ros</build_depend>

  <exec_depend>image_transport</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>diagnostic_updater</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
